# OCRmyPDF-worker

./: Dockerfile  README.md  document.pdf.ocr.txt  document.pdf.pdfminer.txt  document.pdf.pdfplumber.txt  pyproject.toml  script.sh
.github/workflows/: build-image.yaml
scripts/: pdf2text.py  script.sh
