[project]
name = "ocrmypdf-worker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dineshdb", email = "dineshdb@dbhattarai.info.np" }
]
dependencies = [
    "pdfplumber>=0.11.3",
    "pdfminer.six>=20231228",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ocrmypdf_worker"]
